# bo1

./: .dockerignore  .env  .env.example  .env.local.example  .env.production  .env.production.example  .gitattributes  .gitignore  .osv-scanner.toml  .pre-commit-config.yaml  .ruff.toml  .trivyignore  ACCOUNT_CONTEXT_PLAN.md  ACTION_MANAGEMENT_PLAN.md  AUDIT_P2_SSE_IMPLEMENTATION.md  AUDIT_REFACTORING_PLAN.md  AUDIT_REPORT.md  BRAND.md  BUG_ANALYSIS_SUMMARY.md  BUG_REPORT_REPETITION.md  CI_CD_SETUP_SUMMARY.md  CLARIFICATION_FIX_PLAN.md  CLAUDE.md  CLEANUP_PLAN.md  CODEBASE_AUDIT.md  COGNITION.md  CONTEXT_BOUNDARY.md  CONTEXT_SUFFICIENCY_PLAN.md  DEPLOYMENT_FIX_SUMMARY.md  DEPLOYMENT_GUIDE.md  DOMAIN_KNOWLEDGE.md  Dockerfile  FIXES.md  FIXES_JSON_PREFILL_AND_COST_TRACKING.md  FLOW_DESIGN_LANGUAGE_V2.md  FLOW_NOTATION_EXAMPLES_V2.md  FLOW_NOTATION_RESEARCH.md  FRONTEND_DEPLOYMENT_FIX.md  GOVERNANCE.md  HORMOZI.md  (+88 more)
.claude/: settings.json  workflow-state.json
.claude/commands/: api_check.md  build.md  clean.md  e2e.md  features.md  fix-prod.md  fix.md  full_audit.md  plan.md  refresh_framework.md  scan.md  secure.md  ship.md  svelte.md  task.md  test.md  ux.md  watch.md
.claude/hooks/: check-plan-approval.sh
.github/: CI_FIX_SUMMARY.md  CONTRIBUTING.md  SECRETS_SETUP.md  VALIDATION_TEST.sh  dependabot.yml  manifest.md  pull_request_template.md
.github/workflows/: ci.yml  database-monitoring.yml  deploy-production.yml  deploy-staging.yml  deploy.yml
audits/: loader.claude
audits/manifests/: api_contract.manifest.xml  architecture_flow.manifest.xml  clean.manifest.xml  cost_optimisation.manifest.xml  data_model.manifest.xml  e2e_explorer.manifest.xml  feature_explorer.manifest.xml  (+17 more)
backend/: .dockerignore  CLAUDE.md  Dockerfile  Dockerfile.prod  manifest.md  openapi.json
bo1/: CLAUDE.md  __init__.py  config.py  constants.py  context.py  demo.py  demo_multiround.py  exceptions.py  main.py  manifest.md
deployment-scripts/: PRODUCTION_ENV_SETUP.md  README.md  SECURITY_NOTICE.md  deploy-from-scratch.sh  deploy-manual.sh  fix-deployment-issues.sh  generate-supabase-keys.js  setup-droplet.sh  setup-github-ssh-keys.sh  setup-letsencrypt.sh  setup-production-server.sh  verify-server-setup.sh
docs/: AI_OVERRIDE_GUIDE.md  AUTH_PROVIDER_EVALUATION.md  BLUE_GREEN_DEPLOYMENT.md  CLOSED_BETA_DEPLOYMENT_GUIDE.md  CODE_REVIEW_GUIDELINES.md  COMPANY_STRUCTURE.md  COMPLEXITY_SCORING.md  DATABASE_SCHEMA.md  DATETIME_HANDLING.md  DEMO.md  DEPENDENCY_MIGRATION_PLAN.md  DISASTER_RECOVERY.md  DOCKER.md  END_TO_END_TEST_DESIGN.md  ENVIRONMENT_VARIABLES.md  INCIDENT_RESPONSE.md  KEYCLOAK_IMPLEMENTATION_PLAN.md  LANGGRAPH_TRAINING.md  LOOP_PREVENTION.md  MARKETING_POSITIONING_GUIDE.md  MIGRATIONS_GUIDE.md  MIGRATION_FLOW_DIAGRAM.md  NON_END_USER_AI_VALIDATION.md  PARALLEL_SUBPROBLEMS_EVENT_EMISSION_FIX.md  PLATFORM_ARCHITECTURE.md  PRODUCTION_DEPLOYMENT.md  PRODUCTION_DEPLOYMENT_QUICKSTART.md  PRODUCTION_SECURITY.md  QUICKSTART.md  README.md  REDIS_KEY_PATTERNS.md  SECURITY_COMPLIANCE.md  SSE_EVENTS.md  SSE_HEARTBEAT.md  STATIC_ASSET_REFACTOR_PLAN.md  SUPERTOKENS_IMPLEMENTATION_PLAN.md  SYSTEM_SHUTDOWN.md  TERMINOLOGY_STANDARDIZATION_PLAN.md  TROUBLESHOOTING.md  slo.md
examples/: hello_world_graph.py
frontend/: .env.example  .gitignore  CLAUDE.md  COOKIE_POLICY.md  DESIGN_SYSTEM_USAGE.md  Dockerfile  Dockerfile.prod  UI_GOVERNANCE.md  components.json  manifest.md  openapi.json  package-lock.json  package.json  playwright.config.ts  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
init-scripts/: 01-create-auth-schema.sql  01-init-database.sql  02-create-keycloak-database.sql  02-create-umami-db.sql
migrations/: CLAUDE.md  README.md  consolidated_baseline.sql  env.py  manifest.md
monitoring/: prometheus.yml
nginx/: README.md  manifest.md  nginx-blue.conf  nginx-green.conf  nginx-ntfy.conf  nginx.conf  waf-allowlist.conf  waf-rules.conf
old_docs/: docker-compose.dev.yml  docker-compose.staging.yml  docker-compose.yml
scripts/: analyze_haiku_ab_test.py  audit_merge_migrations.py  audit_model_schema.py  audit_npm_deps.py  audit_python_deps.py  backup_postgres.sh  benchmark_indexes.py  benchmark_v1_v2.py  benchmark_v2.py  bump-version.sh  check_migration_history.py  check_openapi_fresh.py  check_report_heartbeat.py  check_table_columns.py  check_waitlist.py  db-report.sh  deploy-app.sh  deploy-production.sh  explain_queries.py  export_openapi.py  filter_openapi_spec.py  fix_partition_migration.py  generate-ssl-cert.sh  init_db.sh  install-hooks.sh  lint_datetime.py  lint_datetime_allowlist.txt  manifest.md  monitor_database.py  prod-cleanup.sh  redis_cleanup.py  restore_postgres.sh  run-sql-migrations.sh  run_chaos_tests.sh  seed_personas.py  send_database_report.py  setup-db-monitoring-cron.sh  test_concurrent_sessions.py  test_sse_scalability.py  verify_backup.sh  (+3 more)
supabase/: README.md
supabase.archive/: README.md
tests/: conftest.py  manifest.md  test_complexity_assessment.py  test_config.py  test_console_adapter.py  test_enrichment_service.py  test_facilitator.py  test_facilitator_node.py  test_facilitator_routing.py  test_graph_execution.py  test_graph_nodes.py  test_integration_day7.py  test_integration_week2_day8_11.py  test_integration_week3_day16_21.py  test_llm_client.py  test_postgres_manager.py  test_pydantic_models.py  test_recommendation_migration.py  test_response_parser.py  test_sanitizer.py  test_schema_validation.py  test_type_contracts.py  test_vote_synthesis_nodes.py
zzz_important/: CONSENSUS_BUILDING_RESEARCH.md  LOGGING_CONFIGURATION.md  MULTIROUND_OPTIMIZATION_PLAN.md  PROMPT_ENGINEERING_FRAMEWORK.md  personas.json
zzz_project/: CI_CD_SETUP_SUMMARY.md  DEPLOYMENT_GUIDE.md  DOCKER_ARCHITECTURE.md  INTEGRATION_TEST_TEMPLATE.md  MVP_IMPLEMENTATION_ROADMAP.md  PRD.md  ROADMAP_UPDATES_SUMMARY.md  SECURITY_INTEGRATION_TEST_SUMMARY.md  SELF_HOSTED_BETA_DEPLOYMENT.md  SERVER_NAMES.md  SUMMARIZER_AGENT_DESIGN.md  TASKS.md  TODO.md  VOTING_TO_RECOMMENDATIONS_MIGRATION.md  WEEK3.5_COMPLETION_REPORT.md  WEEK4_DAY26_COMPLETION.md  WEEK6_API_SUMMARY.md
(+2074 files in other folders)
