[project]
name = "bo1"
version = "0.1.0"
description = "Board of One - AI-powered decision-making system with multi-agent debate"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Board of One Team" }
]

dependencies = [
    # LLM & Orchestration
    "anthropic>=0.39.0",
    "langchain>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-community>=0.3.0",
    # State & Embeddings
    "redis>=5.0.0",
    "voyageai>=0.2.0",
    # Database (v2+)
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.9",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    # Data & Config
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    # Console UI
    "rich>=13.0.0",
    # Utilities
    "numpy>=1.26.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.11.0",
    "langgraph>=1.0.3",
    "langgraph-checkpoint-redis>=0.1.2",
    "networkx>=3.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "types-redis>=4.6.0",
]

[project.scripts]
bo1 = "bo1.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"bo1/models/*.py" = ["ANN401", "D106"]
"bo1/ui/console.py" = ["ANN401"]
"test*.py" = ["ANN"]
"tests/*.py" = ["ANN"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers --cov=bo1 --cov-report=term-missing"
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["bo1"]
omit = ["tests/*", "**/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[dependency-groups]
dev = [
    "pre-commit>=4.4.0",
]
