[project]
name = "bo1"
version = "0.1.0"
description = "Board of One - AI-powered decision-making system with multi-agent debate"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Board of One Team" }
]

dependencies = [
    # LLM & Orchestration - Updated to tested versions with major version caps
    "anthropic>=0.74.1,<1.0",  # Latest stable (0.74.1), cap before 1.0
    "langchain>=1.0.8,<2.0",  # 1.0.8 stable API
    "langchain-anthropic>=1.1.0,<2.0",  # 1.1.0 - NOTE: max_tokens default behavior changed (must be explicit)
    "langchain-community>=0.4.0,<1.0",  # Current stable
    # State & Embeddings
    "redis>=6.4.0,<7.0",  # BLOCKER: langgraph-checkpoint-redis 0.2.1 requires redis<7.0 (awaiting 0.3.0)
    "voyageai>=0.3.0",  # Voyage AI embeddings API
    # Database (v2+)
    "alembic>=1.17.0",  # Latest migration tool
    "psycopg2-binary>=2.9.9",  # Stable postgres driver
    "sqlalchemy>=2.0.0,<3.0",  # 2.x is stable, cap before 3.0
    "asyncpg>=0.29.0",  # Async postgres driver
    "pgvector>=0.2.0",  # PostgreSQL vector extension
    # Data & Config
    "pydantic>=2.12.0,<3.0",  # 2.12+ has latest validation features
    "pydantic-settings>=2.12.0,<3.0",  # Aligned with pydantic
    "email-validator>=2.0.0",  # Email validation for Pydantic EmailStr
    "python-dotenv>=1.0.0",  # Stable env loading
    # Web API
    "fastapi>=0.121.3,<1.0",  # Web API framework (0.121.3)
    "uvicorn[standard]>=0.27.0,<1.0",  # ASGI server
    "sse-starlette>=3.0.3,<4.0",  # SSE streaming support (3.0.3 - automatic event loop management)
    "python-multipart>=0.0.9",  # Form data parsing
    "supabase>=2.0.0,<3.0",  # Supabase client for auth (will be removed)
    "pyjwt>=2.8.0,<3.0",  # JWT token verification
    "httpx>=0.27.0,<1.0",  # HTTP client for API calls
    "supertokens-python>=0.30.0,<1.0",  # SuperTokens SDK for BFF auth pattern
    # Console UI
    "rich>=14.0.0",  # 14.x current stable
    # Utilities
    "numpy>=2.3.5,<3.0",  # 2.3.5 stable, cap before 3.0 breaking changes
    "scikit-learn>=1.7.0,<2.0",  # Current stable ML library
    "scipy>=1.16.0,<2.0",  # Current stable scientific computing
    "langgraph>=1.0.3,<2.0",  # Graph orchestration, cap before 2.0
    "langgraph-checkpoint-redis>=0.2.1,<1.0",  # Redis checkpointing (0.2.1 requires redis>=6.4.0)
    "langgraph-prebuilt>=1.0.5,<2.0",  # LangGraph prebuilt nodes (1.0.5)
    "langchain-core>=1.0.7,<2.0",  # LangChain core (1.0.7)
    "langsmith>=0.4.44,<1.0",  # LangSmith tracing (0.4.44)
    "starlette>=0.50.0,<1.0",  # Starlette ASGI framework (0.50.0)
    "networkx>=3.5",  # Graph library
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",  # Latest pytest with improved fixtures
    "pytest-asyncio>=1.3.0",  # Async test support
    "pytest-cov>=7.0.0",  # Coverage reporting
    "ruff>=0.14.0",  # Fast linter and formatter
    "mypy>=1.18.0",  # Static type checker
    "types-redis>=4.6.0",  # Type stubs for Redis
    "types-PyYAML>=6.0.0",  # Type stubs for YAML
    "types-requests>=2.31.0",  # Type stubs for requests
]

[project.scripts]
bo1 = "bo1.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"bo1/models/*.py" = ["ANN401", "D106"]
"bo1/ui/console.py" = ["ANN401"]
"test*.py" = ["ANN"]
"tests/*.py" = ["ANN"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers --cov=bo1 --cov-report=term-missing"
testpaths = ["tests"]
pythonpath = [".", "backend"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["bo1"]
omit = ["tests/*", "**/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[dependency-groups]
dev = [
    "pre-commit>=4.4.0",
]
