[project]
name = "bo1"
version = "0.8.0"
description = "Board of One - AI-powered decision-making system with multi-agent debate"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Board of One Team" }
]

dependencies = [
    # LLM & Orchestration - Updated to tested versions with major version caps
    "anthropic>=0.74.1,<1.0", # Latest stable (0.74.1), cap before 1.0
    "openai>=1.56.0,<3.0", # OpenAI Python SDK (fallback provider, 2.x compatible)
    "langchain>=1.0.8,<2.0", # 1.0.8 stable API
    # langchain-anthropic removed - code uses raw Anthropic SDK directly
    "langchain-community>=0.4.0,<1.0", # Current stable
    # State & Embeddings
    "redis>=5.2.1,<8.0", # langgraph-checkpoint-redis 0.3.1 supports redis 7+
    "voyageai>=0.3.0", # Voyage AI embeddings API
    # Database (v2+)
    "alembic>=1.17.0", # Latest migration tool
    "psycopg2-binary>=2.9.9", # Stable postgres driver
    "sqlalchemy>=2.0.0,<3.0", # 2.x is stable, cap before 3.0
    # asyncpg removed - not used (psycopg2-binary is the active driver)
    "pgvector>=0.2.0", # PostgreSQL vector extension
    # Data & Config
    "pydantic>=2.12.0,<3.0", # 2.12+ has latest validation features
    "pydantic-settings>=2.12.0,<3.0", # Aligned with pydantic
    "email-validator>=2.0.0", # Email validation for Pydantic EmailStr
    "python-dotenv>=1.0.0", # Stable env loading
    # Web API
    "fastapi>=0.124.4", # Web API framework (0.121.3)
    "uvicorn[standard]>=0.27.0,<1.0", # ASGI server
    "sse-starlette>=3.0.3,<4.0", # SSE streaming support (3.0.3 - automatic event loop management)
    "python-multipart>=0.0.22", # Form data parsing (CVE-2026-24486)
    "slowapi>=0.1.9,<1.0", # Rate limiting for FastAPI
    # supabase removed - SuperTokens used for auth instead
    "pyjwt>=2.8.0,<3.0", # JWT token verification
    "httpx>=0.27.0,<1.0", # HTTP client for API calls
    "supertokens-python>=0.29.0,<0.31.0", # SuperTokens SDK for BFF auth pattern (0.30+ adds WebAuthn)
    # Console UI
    "rich>=14.0.0", # 14.x current stable
    # Utilities
    "numpy>=2.3.5,<3.0", # 2.3.5 stable, cap before 3.0 breaking changes
    "scikit-learn>=1.7.0,<2.0", # Current stable ML library
    "scipy>=1.16.0,<2.0", # Current stable scientific computing
    "langgraph>=1.0.3,<2.0", # Graph orchestration, cap before 2.0
    "langgraph-checkpoint-redis>=0.3.1,<1.0", # Redis checkpointing (0.3.1 supports redis 7+)
    "langgraph-checkpoint-postgres>=2.0.7,<4.0", # PostgreSQL checkpointing (alternative backend)
    "psycopg[binary,pool]>=3.2.0,<4.0", # Psycopg 3 for async postgres (langgraph-checkpoint-postgres)
    "langgraph-prebuilt>=1.0.5,<2.0", # LangGraph prebuilt nodes (1.0.5)
    "langchain-core>=1.2.5", # LangChain core (1.0.7)
    "langsmith>=0.4.44,<1.0", # LangSmith tracing (0.4.44)
    "starlette>=0.50.0,<1.0", # Starlette ASGI framework (0.50.0)
    "networkx>=3.5", # Graph library
    "resend>=2.19.0",
    "svix>=1.82.0", # Webhook signature verification (used by Resend)
    # Object Storage (DigitalOcean Spaces / S3-compatible)
    "boto3>=1.35.0,<2.0", # AWS SDK for S3-compatible object storage
    # Data Analysis
    "pandas>=2.2.0,<4.0", # DataFrame operations for dataset profiling
    "ydata-profiling>=4.6.0,<5.0", # Automated data profiling
    "duckdb>=1.0.0,<2.0", # In-memory OLAP database for large dataset queries
    "setuptools>=70.0.0", # Required by ydata-profiling for pkg_resources
    "plotly>=5.18.0,<7.0", # Chart generation (JSON for frontend)
    "matplotlib>=3.8.0", # PNG chart export for PDF embedding (no Chromium needed)
    # Observability
    "prometheus-client>=0.21.0", # Prometheus metrics
    "prometheus-fastapi-instrumentator>=7.0.0", # FastAPI auto-instrumentation
    "psutil>=6.0.0", # Process-level system metrics (CPU, memory, file descriptors)
    # OpenTelemetry (optional distributed tracing - enable via OTEL_ENABLED=true)
    "opentelemetry-api>=1.24.0",
    "opentelemetry-sdk>=1.24.0",
    "opentelemetry-exporter-otlp>=1.24.0",
    "opentelemetry-instrumentation-fastapi>=0.45b0",
    # Sentry (optional error tracking - enable via SENTRY_DSN env var)
    "sentry-sdk[fastapi]>=2.0.0,<3.0",
    "cryptography>=43.0.0", # Fernet encryption for OAuth tokens at rest
    "stripe>=14.0.1",
    # Embedding visualization (optional - falls back to PCA)
    "umap-learn>=0.5.0", # UMAP dimensionality reduction
    "urllib3>=2.6.0",
    "pytest-asyncio>=1.3.0",
    # Security fixes (transitive deps)
    "jaraco.context>=6.1.0",  # CVE-2026-23949 (path traversal)
    "wheel>=0.46.2",  # CVE-2026-24049 (privilege escalation)
    "orjson>=3.11.5",  # CVE-2025-67221 (recursion DoS)
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",  # Latest pytest with improved fixtures
    "pytest-asyncio>=1.3.0",  # Async test support
    "pytest-cov>=7.0.0",  # Coverage reporting
    "ruff>=0.14.0",  # Fast linter and formatter
    "mypy>=1.18.0",  # Static type checker
    "types-redis>=4.6.0",  # Type stubs for Redis
    "types-PyYAML>=6.0.0",  # Type stubs for YAML
    "types-requests>=2.31.0",  # Type stubs for requests
    "locust>=2.20",  # Load testing framework
    "pip-audit>=2.7.0",  # Dependency vulnerability scanner
]

[project.scripts]
bo1 = "bo1.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "S608",  # SQL injection false positive for hardcoded table names in migrations
]

[tool.ruff.lint.per-file-ignores]
"bo1/graph/state.py" = ["E402", "I001"]  # Re-exports at bottom of file after class definitions
"bo1/models/*.py" = ["ANN401", "D106"]
"bo1/ui/console.py" = ["ANN401"]
"test*.py" = ["ANN"]
"tests/*.py" = ["ANN"]
"scripts/*.py" = ["ANN", "S608", "F841"]  # Scripts: type annotations optional, SQL injection false positives ok
"migrations/versions/*.py" = ["S608"]  # Alembic migrations: SQL injection false positives for hardcoded table names
"tests/load/*.py" = ["ANN", "S311"]  # Load tests: annotations optional, random is fine
"tests/load/users/*.py" = ["ANN", "S311"]
"tests/load/scenarios/*.py" = ["ANN", "S311"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "bo1.llm.cost_tracker"
# Disable warnings for redis type stubs inconsistency between local and Docker environments
warn_unused_ignores = false

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = false
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
pythonpath = [".", "backend"]
asyncio_mode = "auto"
markers = [
    "asyncio: mark test as async",
    "unit: mark test as unit test",
    "integration: mark test as integration test",
    "requires_llm: mark test as requiring LLM API calls",
    "chaos: mark test as chaos/resilience test",
]

[tool.coverage.run]
source = ["bo1"]
omit = ["tests/*", "**/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[dependency-groups]
dev = [
    "pre-commit>=4.4.0",
]
